# symtool

./: Cargo.toml  README.md  symtool.rb
.github/workflows/: ci.yml  release.yml
pkg/brew/: symtool.rb
src/: elf.rs  error.rs  lib.rs  mach.rs  manip.rs  object.rs  patch.rs
symtool/: Cargo.toml  README.md
symtool-backend/: Cargo.toml  README.md
symtool-backend/src/: elf.rs  error.rs  lib.rs  mach.rs  object.rs  patch.rs
symtool/doc/: symtool.1
symtool/src/: error.rs  main.rs
